--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sample</title>
+    <title>simon game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Simon Game</h1>
+    <h2>Press any key to staret the game</h2>
+    <div class="btn-container">
+        <div class="item1">
+            <div class="btn red" type="button" id="red">1</div>
+            <div class="btn green" type="button" id="green">2</div>
+        </div>
+        <div class="item2">
+            <div class="btn yellow" type="button" id="yellow">3</div>
+            <div class="btn blue" type="button" id="blue">4</div>
+        </div>
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
